--- a/wp-content/themes/zadanie/package.json
+++ b/wp-content/themes/zadanie/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "bootstrap": "^4.5.3",
     "jquery": "^3.5.1",
+    "macy": "^2.5.1",
     "popper.js": "^1.16.1"
   },
   "devDependencies": {
